// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for coverage 1`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <CoverageRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.coverage.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="coverage"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      metric.coverage.name
    </span>
  </div>
</div>
`;

exports[`should render correctly for coverage 2`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <CoverageRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.coverage.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="coverage"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="overview.coverage_on_X_lines"
        id="overview.coverage_on_X_lines"
        values={
          {
            "count": <DrilldownLink
              branchLike={
                {
                  "analysisDate": "2018-01-01",
                  "base": "master",
                  "branch": "feature/foo/bar",
                  "key": "1001",
                  "target": "master",
                  "title": "Foo Bar feature",
                }
              }
              className="big"
              component="my-project"
              metric="lines_to_cover"
            >
              1
            </DrilldownLink>,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`should render correctly for coverage 3`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <CoverageRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.new_coverage.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="new_coverage"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="overview.coverage_on_X_new_lines"
        id="overview.coverage_on_X_new_lines"
        values={
          {
            "count": <DrilldownLink
              branchLike={
                {
                  "analysisDate": "2018-01-01",
                  "base": "master",
                  "branch": "feature/foo/bar",
                  "key": "1001",
                  "target": "master",
                  "title": "Foo Bar feature",
                }
              }
              className="big"
              component="my-project"
              metric="new_lines_to_cover"
            >
              1
            </DrilldownLink>,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`should render correctly for duplications 1`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <DuplicationsRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.duplicated_lines_density.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="duplicated_lines_density"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      metric.duplicated_lines_density.short_name
    </span>
  </div>
</div>
`;

exports[`should render correctly for duplications 2`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <DuplicationsRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.duplicated_lines_density.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="duplicated_lines_density"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="overview.duplications_on_X_lines"
        id="overview.duplications_on_X_lines"
        values={
          {
            "count": <DrilldownLink
              branchLike={
                {
                  "analysisDate": "2018-01-01",
                  "base": "master",
                  "branch": "feature/foo/bar",
                  "key": "1001",
                  "target": "master",
                  "title": "Foo Bar feature",
                }
              }
              className="big"
              component="my-project"
              metric="ncloc"
            >
              1
            </DrilldownLink>,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`should render correctly for duplications 3`] = `
<div
  className="display-flex-center"
>
  <span
    className="big-spacer-right"
  >
    <DuplicationsRating
      size="big"
      value={1}
    />
  </span>
  <div
    className="display-flex-column"
  >
    <span>
      <DrilldownLink
        ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.new_duplicated_lines_density.name"
        branchLike={
          {
            "analysisDate": "2018-01-01",
            "base": "master",
            "branch": "feature/foo/bar",
            "key": "1001",
            "target": "master",
            "title": "Foo Bar feature",
          }
        }
        className="overview-measures-value text-light"
        component="my-project"
        metric="new_duplicated_lines_density"
      >
        1.0%
      </DrilldownLink>
    </span>
    <span
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="overview.duplications_on_X_new_lines"
        id="overview.duplications_on_X_new_lines"
        values={
          {
            "count": <DrilldownLink
              branchLike={
                {
                  "analysisDate": "2018-01-01",
                  "base": "master",
                  "branch": "feature/foo/bar",
                  "key": "1001",
                  "target": "master",
                  "title": "Foo Bar feature",
                }
              }
              className="big"
              component="my-project"
              metric="new_lines"
            >
              1
            </DrilldownLink>,
          }
        }
      />
    </span>
  </div>
</div>
`;

exports[`should render correctly when centered 1`] = `
<div
  className="display-flex-column flex-1"
>
  <div
    className="display-flex-center display-flex-justify-center"
  >
    <span
      className="big-spacer-right"
    >
      <CoverageRating
        size="big"
        value={1}
      />
    </span>
    <DrilldownLink
      ariaLabel="overview.see_more_details_on_x_of_y.1.0%.metric.coverage.name"
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      className="overview-measures-value text-light"
      component="my-project"
      metric="coverage"
    >
      1.0%
    </DrilldownLink>
  </div>
  <div
    className="spacer-top text-center"
  >
    metric.coverage.name
  </div>
</div>
`;

exports[`should render correctly with no value 1`] = `
<div
  className="display-flex-center"
>
  <span
    aria-label="no_data"
    className="overview-measures-empty-value"
  />
  <span
    className="big-spacer-left"
  >
    metric.coverage.name
  </span>
</div>
`;
